--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -4,4 +4,17 @@
 
 <web-app>
   <display-name>Archetype Created Web Application</display-name>
+  <!-- log4j2设置,此处配置适用于Servlet的3.0及以上版本使用,3.0以下版本另有配置 -->
+  <!-- 如果log4j2.xml放在classpath目录下(即class目录),纯web项目中,不需要log4j2的任何配置也能启用日志 -->
+  <!-- 如果不是放在classpath目录下,则需要指定配置文件路径 -->
+  <!-- 如果放在classpath下其他的目录中,即使指定路径也无法找到log4j2.xml -->
+  <context-param>
+    <param-name>log4jConfigLocation</param-name>
+    <param-value>classpath:log4j2.xml</param-value>
+    <!-- 配置log4j2.xml文件路径在/WEB-INF/目录下,放置在这里可以被加载到文件 -->
+    <!-- <param-value>/WEB-INF/log4j2.xml</param-value> -->
+  </context-param>
+  <listener>
+    <listener-class>org.apache.logging.log4j.web.Log4jServletContextListener</listener-class>
+  </listener>
 </web-app>
